# skillcoco

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  COORDINATION.md  Cargo.toml  LICENSE  LICENSE-DOCS  LICENSE-STUDIO  LICENSING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  WORKSPACE.md  build.config.ts  index.html  package.json  plugins.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/helpers/: statusline.cjs
.githooks/: pre-commit
.github/: release-notes-template.md
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check-pro-leak.yml  cla.yml  core-publish.yml  release.yml  secret-scan.yml
docs/: CERT-PAYLOAD-V1.md  CONTRIBUTING-STUDIO.md  DEVELOPMENT.md  LAUNCH-PLAYBOOK.md  MACOS-SIGNING-SETUP.md  OSS-VS-STUDIO.md  REPO-ARCHITECTURE.md  VERSIONING.md  learnforge-product-spec.docx  pricing-tiers.md  studio-landing-outline.md  workshop-environment-onepager.md
docs/blog/: bkt-explained.md  building-learnforge.md  learning-isnt-watching.md
docs/plans/: 2026-03-02-iteration2-adaptive-loop-design.md  2026-03-02-iteration2-implementation.md  2026-03-02-oauth-implementation.md  2026-03-02-oauth-zeroclaw-design.md  (+6 more)
learnforge-core/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
scripts/: check-no-pro-leak.sh  check-no-pro-leak.test.sh  pyproject.toml  requirements-enrichment.txt  sheet2pack.py  skill-report-aggregate.py
scripts/enrichment/: content_cache.py  lesson_generator.py  models.py  quiz_generator.py  token_estimator.py  transcript.py  vtt_parser.py
scripts/enrichment/eval/: __init__.py  checks.py  judge.py  report.py
scripts/enrichment/tests/: conftest.py  test_content_cache.py  test_eval_checks.py  test_eval_report.py  test_integration.py  test_lesson_generator.py  test_models.py  test_quiz_generator.py  test_token_estimator.py  test_transcript.py  test_vtt_parser.py
scripts/enrichment/tests/fixtures/: adversarial_duplicate_distractor.json  adversarial_grounding_violation.json  adversarial_truncated_quiz.json
skillcoco-core/: CHANGELOG.md  Cargo.toml  README.md
skillcoco-core/docs/: BKT.md  MICROLEARNING.md  SIGNING.md  SM2.md  THRESHOLD.md
skillcoco-core/examples/: bkt_update.rs  pack_validate.rs  sm2_schedule.rs  verify_payload.rs
skillcoco-core/src/: achievements.rs  bkt.rs  blocks.rs  canonical_json.rs  lib.rs  microlearning.rs  path.rs  signing.rs  sm2.rs  threshold.rs
skillcoco-core/src/packs/: export.rs  loader.rs  mod.rs  model.rs  registry.rs  schema.rs
skillcoco-core/tests/: wasm.rs
skillcoco-core/topic-packs/: pack-schema.json
skillcoco-core/topic-packs/ai-engineering/: pack.json
skillcoco-core/topic-packs/python-for-devops/: pack.json
src/: App.tsx  index.css  main.tsx  setupTests.ts
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/starter-packs/: README.md  kubernetes-fundamentals-starter.json  python-for-devops-starter.json  rust-from-zero-starter.json
src-tauri/src/: command_history_tests.rs  lib.rs  main.rs  pdf_util.rs
src-tauri/src/achievements/: artifacts.rs  milestones_and_completion.rs  mod.rs  signing.rs  threshold.rs
src-tauri/src/ai/: anthropic.rs  claude.rs  mod.rs  ollama.rs  openai.rs  provider.rs  retry.rs  service.rs
src-tauri/src/auth/: commands.rs  mod.rs  oauth.rs
src-tauri/src/commands/: achievements.rs  ai.rs  blocks.rs  course_io.rs  entitlements.rs  entitlements_tests.rs  labs.rs  learning.rs  microlearning.rs  mod.rs  reports.rs  reports_tests.rs  tracks.rs  videos.rs
src-tauri/src/commands/labs/: eval.rs  eval_tests.rs  exam.rs  exam_entry.rs  exam_entry_tests.rs  exam_tests.rs  mod.rs  session.rs  session_tests.rs  state.rs
src-tauri/src/db/: blocks.rs  microlearning.rs  mod.rs  models.rs  schema.rs
src-tauri/src/db/migrations/: mod.rs  v001_initial.rs  v002_drop_ai_config.rs  v003_streak_columns.rs  v004_module_blocks.rs  v005_lesson_completions.rs  v006_lab_progress.rs  v007_microlearning.rs  v008_topic_packs.rs  v009_achievements.rs  v010_cert_simplification.rs  v011_track_browse_mode.rs  v012_lesson_videos.rs  v013_section_video_granularity.rs  v014_drop_module_video_unique_index.rs  v015_learning_path_verified.rs  v016_quiz_attempts.rs  v017_skill_reports.rs  v018_backfill_capability_tags.rs  v019_exam_attempts.rs  v020_entitlements.rs
src-tauri/src/entitlements/: download.rs  fingerprint.rs  mod.rs  redeem.rs
src-tauri/src/labs/: docker.rs  evaluator.rs  host_shell.rs  mod.rs  pageplanner_labs.rs  prompt_detect.rs  pty.rs  spec.rs  spec_tests.rs  test_support.rs
src-tauri/src/learning/: adaptive.rs  microlearning_selection.rs  mod.rs  path.rs  spaced_repetition.rs
src-tauri/src/licensing/: mod.rs
src-tauri/src/reports/: artifacts.rs  mod.rs
src-tauri/src/storage_impl/: achievements.rs  bkt.rs  blocks.rs  entitlements.rs  microlearning.rs  mod.rs  packs.rs  reports.rs  reports_tests.rs  signing.rs  sr.rs  threshold.rs
src-tauri/src/topic_packs/: commands.rs  error.rs  loader.rs  mod.rs  model.rs  persistence.rs  registry.rs  schema.rs
src-tauri/src/vector/: mod.rs
src-tauri/tests/: integration_tests.rs
src-tauri/tests/fixtures/entitlements/: README.md
src-tauri/tests/fixtures/labs/manifests/: kubernetes-manifest.yaml
src-tauri/tests/fixtures/labs/specs/: creates-traversal.lab.md  exam-pod-create.lab.md  image-and-dockerfile-both.lab.md  malformed-frontmatter.lab.md  valid-pod-create.lab.md
src-tauri/tests/fixtures/labs/topic-packs/coursesmith-demo/labs/m1-container-native-lab/: LAB.md
src-tauri/tests/fixtures/labs/transcripts/: README.txt  exit-nonzero.bytes  exit-zero.bytes  kubectl-get-pods.bytes  no-osc-133.bytes
(+207 files in other folders)
