[package]
name = "learnforge"
version = "0.1.0"
description = "AI-powered adaptive learning desktop application"
authors = ["School of DevOps & AI"]
edition = "2021"

[lib]
name = "learnforge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
open = "5"
dirs = "5"

# AI provider auth + API calls
# zeroclaw = { path = "../../../../agentix/upstream/zeroclaw", default-features = false }

# Vector DB for embeddings
# ruvector-core = { path = "../../../../agentix/upstream/ruvector/crates/ruvector-core", default-features = false, features = ["storage", "hnsw", "simd", "parallel"] }

# Graph DB for learning path DAGs
# ruvector-graph = { path = "../../../../agentix/upstream/ruvector/crates/ruvector-graph", default-features = false }
portable-pty = "0.9"
bollard = "0.19"
gray_matter = "0.2"
serde_yaml = "0.9"
regex = "1"

# Phase 5 (Topic Packs) — JSON Schema validation + compile-time pack embedding
jsonschema = "0.46"
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"
