[package]
name = "skillcoco"
version = "0.1.0"
description = "AI-powered adaptive learning desktop application"
authors = ["School of DevOps & AI"]
edition = "2021"

[lib]
name = "skillcoco_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Phase 7 Wave 2 (Plan 07-02) — workspace path dep wiring (D-09). src-tauri
# now consumes the publishable algorithm crate; module-by-module migration
# follows in Waves 3-8. learning/adaptive.rs and learning/path.rs are
# transitional re-export shims that delete in Wave 10 (07-10-PLAN.md).
skillcoco-core = { path = "../skillcoco-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
open = "5"
dirs = "5"

# AI provider auth + API calls
# zeroclaw = { path = "../../../../agentix/upstream/zeroclaw", default-features = false }

# Vector DB for embeddings
# ruvector-core = { path = "../../../../agentix/upstream/ruvector/crates/ruvector-core", default-features = false, features = ["storage", "hnsw", "simd", "parallel"] }

# Graph DB for learning path DAGs
# ruvector-graph = { path = "../../../../agentix/upstream/ruvector/crates/ruvector-graph", default-features = false }
portable-pty = "0.9"
bollard = "0.19"
gray_matter = "0.2"
serde_yaml = "0.9"
regex = "1"

# Phase 5 (Topic Packs) — JSON Schema validation + compile-time pack embedding
jsonschema = "0.46"
include_dir = "0.7"

# Phase 6 (Certification) — Wave 0 dependency adds (Plan 06-01).
# Phase 7 Wave 5 (07-05) — `sha2` removed; the SHA-256 fingerprint hashing
# moved to `skillcoco_core::signing::public_key_fingerprint` and no
# src-tauri code outside the (now shim) signing module references it
# directly. Verified via:
#   rg "sha2|Sha256" src-tauri/src/ --type rust  →  0 hits
# The transitive sha2 dep is pulled through `skillcoco-core` so no
# resolution-graph change occurs.
# Crate selection locked in 06-RESEARCH.md + 06-CONTEXT.md A2:
#   - qrcode 0.14 + image 0.25 for QR (NOT fast_qr — A2 lock)
#   - printpdf 0.9 for the PDF certificate (text-only Helvetica Std 14)
#   - ed25519-dalek 2.x for OSS cert signing (separate from Pro licensing)
#   - base64 / hex / rand for canonical payload + key fingerprint
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core", "pem"] }
# Plan 06-02 (Wave 1) — direct access to pkcs8::LineEnding for PEM I/O.
# ed25519-dalek 2.x re-exports DecodePrivateKey/EncodePrivateKey but not
# LineEnding (which lives behind `pkcs8/pem`). Pulling pkcs8 directly with
# the `pem` feature exposes LineEnding without changing the resolved
# version (already in the tree via ed25519-dalek).
pkcs8 = { version = "0.10", features = ["pem"] }
qrcode = "0.14"
image = "0.25"
printpdf = { version = "0.9", features = ["images", "png"] }
base64 = "0.22"
hex = "0.4"
rand = "0.8"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[dev-dependencies]
tempfile = "3"
